# sigma-rust

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  audit.toml  release.toml
ast/: Cargo.toml
ast/src/: lib.rs
bindings/ergo-lib-c/: Cargo.toml  README.md  build.rs  cbindgen.rest.toml  cbindgen.toml
bindings/ergo-lib-c-core/: Cargo.toml  README.md
bindings/ergo-lib-c-core/src/: address.rs  batchmerkleproof.rs  block_header.rs  box_builder.rs  box_selector.rs  collections.rs  constant.rs  context_extension.rs  contract.rs  data_input.rs  ergo_box.rs  ergo_state_ctx.rs  ergo_tree.rs  error.rs  error_conversion.rs  ext_secret_key.rs  header.rs  input.rs  json.rs  lib.rs  merkleproof.rs  nipopow.rs  parameters.rs  reduced.rs  rest.rs  secret_key.rs  token.rs  transaction.rs  tx_builder.rs  util.rs  wallet.rs
bindings/ergo-lib-c/h/: ergo_wallet.h
bindings/ergo-lib-c/src/: address.rs  batchmerkleproof.rs  block_header.rs  box_builder.rs  box_selector.rs  byte_array.rs  constant.rs  context_extension.rs  contract.rs  data_input.rs  ergo_box.rs  ergo_state_ctx.rs  ergo_tree.rs  ext_secret_key.rs  header.rs  input.rs  lib.rs  macros.rs  merkleproof.rs  nipopow.rs  parameters.rs  reduced.rs  rest.rs  secret_key.rs  token.rs  transaction.rs  tx_builder.rs  wallet.rs
bounded-vec/: Cargo.toml
bounded-vec/src/: bounded_vec.rs  lib.rs
ergo-chain-generation/: Cargo.toml
ergo-chain-generation/src/: chain_generation.rs  fake_pow_scheme.rs  lib.rs
ergo-chain-types/: Cargo.toml  README.md
ergo-chain-types/src/: base16_bytes.rs  block_id.rs  digest32.rs  ec_point.rs  ecpoint.rs  extensioncandidate.rs  header.rs  json.rs  lib.rs  peer_addr.rs  peer_connection_dir.rs  preheader.rs  serialization.rs  votes.rs
ergo-chain-types/src/json/: autolykos_solution.rs  votes.rs
ergo-lib/: CHANGELOG.md  Cargo.toml  README.md  release.toml
ergo-lib/proptest-regressions/serialization/: types.txt
ergo-lib/proptest-regressions/wallet/: tx_builder.txt
ergo-lib/src/: ast.rs  big_integer.rs  chain.rs  constants.rs  ergo_tree.rs  eval.rs  lib.rs  serialization.rs  sigma_protocol.rs  test_util.rs  traits.rs  types.rs  util.rs  utils.rs  wallet.rs
ergo-lib/src/ast/: and.rs  apply.rs  bin_op.rs  block.rs  bool_to_sigma.rs  box_methods.rs  calc_blake2b256.rs  coll_by_index.rs  coll_filter.rs  coll_fold.rs  coll_map.rs  coll_methods.rs  coll_size.rs  collection.rs  constant.rs  context_methods.rs  expr.rs  extract_amount.rs  extract_reg_as.rs  extract_script_bytes.rs  func_value.rs  global_vars.rs  if_op.rs  logical_not.rs  method_call.rs  ops.rs  opt_methods.rs  option_get.rs  or.rs  predef_func.rs  property_call.rs  select_field.rs  upcast.rs  val_def.rs  val_use.rs  value.rs
ergo-lib/src/chain/: addigest.rs  address.rs  base16_bytes.rs  block.rs  block_header.rs  contract.rs  data_input.rs  digest32.rs  ergo_box.rs  ergo_state_context.rs  input.rs  json.rs  parameters.rs  prover_result.rs  token.rs  transaction.rs
ergo-lib/src/eval/: context.rs  context_methods.rs  cost_accum.rs  costs.rs  env.rs  expr.rs  global_vars.rs  method_call.rs  opt_methods.rs  property_call.rs  tvalue.rs  value.rs
ergo-lib/src/serialization/: bin_op.rs  constant.rs  constant_store.rs  (+14 more)
ergo-lib/tests/: nipopow_tests.rs
ergo-merkle-tree/: Cargo.toml
ergo-merkle-tree/src/: batchmerkleproof.rs  json.rs  lib.rs  merkleproof.rs  merkletree.rs
ergo-nipopow/: Cargo.toml  README.md
ergo-nipopow/src/: autolykos_pow_scheme.rs  lib.rs  nipopow_algos.rs  nipopow_proof.rs  nipopow_verifier.rs
ergo-p2p/: Cargo.toml  README.md  clippy.toml
ergo-p2p/src/: client.rs  codec.rs  constants.rs  error.rs  lib.rs  message.rs  peer_addr.rs  peer_connection_handler.rs  peer_connector.rs  peer_database.rs  peer_feature.rs  peer_info.rs  peer_spec.rs  protocol_version.rs
ergo-rest/: Cargo.toml  README.md
ergo-rest/src/: api.rs  bulk_req.rs  error.rs  known_nodes.rs  lib.rs  node_client.rs  node_conf.rs  node_info.rs  node_response.rs  peer_info.rs  reqwest.rs  wasm_timer.rs
ergo-rest/tests/: wasm_simple.rs
ergoscript-compiler/: Cargo.toml
ergoscript-compiler/src/: ast.rs  binder.rs  compiler.rs  error.rs  hir.rs  lexer.rs  lib.rs  mir.rs  parser.rs  script_env.rs  syntax.rs  type_infer.rs
ergotree-interpreter/: Cargo.toml  README.md
ergotree-interpreter/src/: contracts.rs  eval.rs  json.rs  lib.rs  sigma_protocol.rs
ergotree-interpreter/tests/: signing_spec_tests.rs
ergotree-ir/: Cargo.toml  README.md
ergotree-ir/src/: address.rs  avltree.rs  base16_str.rs  bigint256.rs  chain.rs  ergo_tree.rs  ergotree_proc_macro.rs  eval.rs  has_opcode.rs  ir_ergo_box.rs  lib.rs  mir.rs  pretty_printer.rs  serialization.rs  sigma_protocol.rs  source_span.rs  type_check.rs  types.rs  util.rs
ergotree-macro/: Cargo.toml  README.md
ergotree-macro/src/: lib.rs
ergotree-macro/tests/: 01-initial.rs  method_call_smoke_tests.rs  progress.rs  tests.rs
gf2_192/: Cargo.toml
gf2_192/src/: gf2_192.rs  gf2_192poly.rs  lib.rs
hir/: Cargo.toml
hir/src/: lib.rs
lexer/: Cargo.toml
lexer/src/: token_kind.rs
parser/: Cargo.toml
parser/src/: grammar.rs  lib.rs  parser.rs  sink.rs
sigma-chain-c/: Cargo.toml
sigma-chain-c/src/: misc_c.rs
sigma-ios/: Cargo.toml  build.rs
sigma-ios/h/: sigma.h
sigma-ios/src/: lib.rs
sigma-ser/: Cargo.toml
sigma-ser/src/: encode.rs  lib.rs  peekable_reader.rs  scorex_serialize.rs  serializer.rs  test_helpers.rs  vlq_encode.rs  writer.rs  zig_zag_encode.rs  zig_zag_encoding.rs
sigma-test-util/: Cargo.toml
sigma-testutil/: Cargo.toml
sigma-testutil/src/: generator.rs  lib.rs
sigma-tree/: Cargo.toml
sigma-tree-c/: Cargo.toml
sigma-tree-c/src/: misc_c.rs
sigma-tree/proptest-regressions/: ergo_tree.txt
sigma-tree/src/: ast.rs  big_integer.rs  chain.rs  constants.rs  data.rs  ecpoint.rs  ergo_tree.rs  eval.rs  lib.rs  serialization.rs  sigma_protocol.rs  tests.rs  types.rs  util.rs  wallet.rs
sigma-util/: Cargo.toml
sigma-util/src/: hash.rs  lib.rs  vec_ext.rs
syntax/: Cargo.toml
syntax/src/: lib.rs
test-util/: Cargo.toml
(+727 files in other folders)
