[workspace]
members = [
    "sigma-test-util",
    "sigma-ser",
    "sigma-util",
    "ergoscript-compiler",
    "ergotree-ir",
    "ergotree-interpreter",
    "ergo-lib",
    "ergo-p2p",
    "ergo-chain-generation",
    "ergo-rest",
    "ergo-chain-types",
    "ergo-nipopow",
    "ergo-merkle-tree",
    "gf2_192",
    "bindings/ergo-lib-wasm",
    "bindings/ergo-lib-c-core",
    "bindings/ergo-lib-c",
    "bindings/ergo-lib-jni"
]

[workspace.dependencies]
bitvec = { version = "1.0.1" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
