[package]
name = "ergo-chain-generation"
version = "0.14.0"
license = "CC0-1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = "0.2.1"
blake2 = "0.9"
byteorder = "1"
ergo-lib = {version = "^0.18.0", path = "../ergo-lib"}
num-bigint = "0.4.0"
rand = "0.8.4"
sigma-test-util = { version = "^0.3.0", path = "../sigma-test-util" }
ergo-chain-types = { version = "^0.6", path = "../ergo-chain-types" }
ergo-nipopow = { version = "^0.5", path = "../ergo-nipopow" }
ergo-merkle-tree = { version = "^0.5", path = "../ergo-merkle-tree" }


[dev-dependencies]
sigma-ser = { version = "^0.8", path = "../sigma-ser" }
serde_json = { version = "1.0" }
