[package]
name = "ergo-chain-generation"
version = "0.14.0"
license = "CC0-1.0"
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = { workspace = true }
blake2 = { workspace = true }
byteorder = { workspace = true }
ergo-lib = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
sigma-test-util = { workspace = true }
ergo-chain-types = { workspace = true }
ergo-nipopow = { workspace = true }
ergo-merkle-tree = { workspace = true }

[dev-dependencies]
sigma-ser = { workspace = true }
serde_json = { workspace = true }
