[package]
name = "ergo-chain-types"
version = "0.1.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "Ergo blockchain types"
repository = "https://github.com/ergoplatform/sigma-rust"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
k256 = { version = "0.9.6", features = ["zeroize", "arithmetic", "ecdsa"] }
base16 = "0.2.1"
derive_more = "0.99"
sigma-ser = { version = "^0.3.0", path = "../sigma-ser" }
elliptic-curve = {version = "0.10.6", features = ["zeroize", "ff"]}
proptest-derive = {version = "0.3.0", optional = true }
num-bigint = "0.4.0"

[dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "1.0.0"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]
optional = true

[dependencies.serde_with]
version = "1.9.1"
features = [ "json" ]
optional = true

[dev-dependencies]
rand = "0.8.3"
pretty_assertions = "0.7.2"

[features]
arbitrary = ["proptest", "proptest-derive"]