[package]
name = "ergo-chain-types"
version = "0.9.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
repository.workspace = true
edition.workspace = true
description = "Ergo blockchain types"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = { workspace = true }
derive_more = { workspace = true }
sigma-ser = { workspace = true }
sigma-util = { workspace = true }
base16 = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
url = { workspace = true }
k256 = { workspace = true }
elliptic-curve = { workspace = true }
num-bigint = { workspace = true }
byteorder = { workspace = true }
serde_with = { workspace = true, optional = true }
proptest = { workspace = true , optional = true }
proptest-derive = {workspace = true, optional = true }

[features]
default = ["json"]
arbitrary = ["proptest", "proptest-derive"]
json = ["serde", "serde_json", "serde_with"]

[dev-dependencies]
