[package]
name = "ergo-lib"
version = "0.14.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "ErgoTree interpreter and wallet-like features for Ergo"
repository = "https://github.com/ergoplatform/sigma-rust"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

sigma-ser = { version = "^0.3.0", path = "../sigma-ser" }
sigma-util = { version = "^0.3.0", path = "../sigma-util" }
ergotree-ir = { version = "^0.14.0", path = "../ergotree-ir", features = ["json"] }
ergotree-interpreter = { version = "^0.14.0", path = "../ergotree-interpreter" }
ergoscript-compiler = { version = "^0.10.0", path = "../ergoscript-compiler" , optional = true}
indexmap = "1.3.2"
base16 = "0.2.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1"
derive_more = "0.99"
# bounded-vec = { git = "https://github.com/ergoplatform/bounded-vec", rev="f684d78" }
bounded-vec = { version = "^0.4.0", git = "https://github.com/ergoplatform/bounded-vec" }
num-bigint = "0.4.0"
proptest-derive = {version = "0.3.0", optional = true }

[dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "1.0.0"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]
optional = true

[dependencies.serde_with]
version = "1.9.1"
features = [ "json" ]
optional = true

[features]
default = ["json", "compiler"]
json = ["serde", "serde_json", "serde_with", "bounded-vec/serde"]
compiler = ["ergoscript-compiler"]
arbitrary = ["proptest", "proptest-derive"]

[dev-dependencies]
wasm-bindgen-test = "0.3.10"
rand = "0.8.4"
ergotree-ir = { version = "^0.14.0", path = "../ergotree-ir", features = ["arbitrary"] }
ergotree-interpreter = { version = "^0.14.0", path = "../ergotree-interpreter", features = ["arbitrary"] }
sigma-test-util = { version = "^0.3.0", path = "../sigma-test-util" }
pretty_assertions = "0.7.2"
