[package]
name = "ergo-lib"
version = "0.15.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "ErgoTree interpreter and wallet-like features for Ergo"
repository = "https://github.com/ergoplatform/sigma-rust"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

sigma-ser = { version = "^0.5.0", path = "../sigma-ser" }
sigma-util = { version = "^0.5.0", path = "../sigma-util" }
ergo-chain-types = { version = "^0.3.0", path = "../ergo-chain-types" }
ergotree-ir = { version = "^0.16.0", path = "../ergotree-ir", features = ["json"] }
ergotree-interpreter = { version = "^0.15.0", path = "../ergotree-interpreter" }
ergo-nipopow = { version = "^0.2", path = "../ergo-nipopow" }
ergoscript-compiler = { version = "^0.11.0", path = "../ergoscript-compiler" , optional = true}
ergo-merkle-tree = { version = "^0.2.0", path = "../ergo-merkle-tree" }
ergo-rest = { version = "^0.1.0", path = "../ergo-rest" , optional = true}
indexmap = "1.3.2"
base16 = "0.2.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1"
derive_more = "0.99"
bounded-vec = { version = "^0.6.0" }
num-bigint = { version = "0.4.0", features = ["serde"] }
proptest-derive = {version = "0.3.0", optional = true }
sha2 = { version = "0.9.8" }
hmac = { version = "0.11.0" }
k256 = { version = "0.10.0", features = ["arithmetic", "ecdsa"] }
pbkdf2 = "0.8"
rand = "0.8.4"
bitvec = { version = "0.22.3", optional = true }
unicode-normalization = "0.1.19"

[dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "1.0.0"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]
optional = true

[dependencies.serde_with]
version = "1.9.1"
features = [ "json" ]
optional = true

[features]
default = ["json", "compiler"]
json = ["serde", "serde_json", "serde_with", "bounded-vec/serde"]
compiler = ["ergoscript-compiler"]
arbitrary = ["proptest", "proptest-derive", "ergotree-ir/arbitrary", "ergo-chain-types/arbitrary", "ergotree-interpreter/arbitrary"]
mnemonic_gen = ["bitvec"]
rest = ["ergo-rest"]

[dev-dependencies]
wasm-bindgen-test = "0.3.10"
ergotree-ir = { version = "^0.16.0", path = "../ergotree-ir", features = ["arbitrary"] }
ergotree-interpreter = { version = "^0.15.0", path = "../ergotree-interpreter", features = ["arbitrary"] }
ergo-merkle-tree = { version = "^0.2.0", path = "../ergo-merkle-tree", features = ["arbitrary"] }
sigma-test-util = { version = "^0.3.0", path = "../sigma-test-util" }
pretty_assertions = "0.7.2"
bs58 = "0.4.0"
byteorder = "1"
