[package]
name = "ergo-merkle-tree"
version = "0.4.0"
edition = "2021"
license = "CC0-1.0"
description = "Merkle tree proofs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9"
base16 = { version = "0.2.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_repr = { version = "0.1.7", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true } # currently thiserror is only needed for json conversion, so it's feature-gated behind json. This may change in the future
itertools = "0.10.3"
proptest-derive = {version = "0.3.0", optional = true }
sigma-ser = { version = "0.7.0", path = "../sigma-ser" }
ergo-chain-types = { version = "0.4.0", path = "../ergo-chain-types" }
[dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "1.0.0"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]
optional = true


[features]
default = ["json"]
json = ["serde", "serde_json", "serde_repr", "base16", "thiserror"]
arbitrary = ["proptest", "proptest-derive", "ergo-chain-types/arbitrary"]
