[package]
name = "ergo-merkle-tree"
version = "0.13.0"
repository.workspace = true
edition.workspace = true
license = "CC0-1.0"
description = "Merkle tree proofs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = { workspace = true }
base16 = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_repr = { version = "0.1.7", optional = true }
serde_json = { workspace = true, optional = true }
# currently thiserror is only needed for json conversion, so it's feature-gated behind json. 
# This may change in the future
thiserror = { workspace = true, optional = true } 
itertools = { workspace = true }
proptest-derive = {workspace = true, optional = true }
sigma-ser = { workspace = true }
ergo-chain-types = { workspace = true }
sigma-util = { workspace = true }
proptest = { workspace = true , optional = true }

[features]
default = ["json"]
json = ["serde", "serde_json", "serde_repr", "base16", "thiserror"]
arbitrary = ["proptest", "proptest-derive", "ergo-chain-types/arbitrary"]
