[package]
name = "ergo-nipopow"
version = "0.4.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "Ergo blockchain types"
repository = "https://github.com/ergoplatform/sigma-rust"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base16 = "0.2.1"
bounded-integer = { version = "^0.5", features = ["types"] }
byteorder = "1"
thiserror = "1"
derive_more = "0.99"
ergotree-ir = { version = "^0.17.0", path = "../ergotree-ir", features = ["json"] }
num-bigint = "0.4.0"
num-traits = "0.2.14"
proptest-derive = {version = "0.3.0", optional = true }
sigma-ser = { version = "^0.7.0", path = "../sigma-ser" }
sigma-util = { version = "^0.6.0", path = "../sigma-util" }
ergo-chain-types = { version = "^0.5.0", path = "../ergo-chain-types" }
ergo-merkle-tree = { version = "^0.4.0", path = "../ergo-merkle-tree" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]

[dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "1.0.0"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]
optional = true

[features]
default = []
arbitrary = ["proptest", "proptest-derive", "ergo-chain-types/arbitrary", "ergotree-ir/arbitrary"]
