[package]
name = "ergo-nipopow"
version = "0.12.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
repository.workspace = true
edition.workspace = true
description = "Ergo blockchain types"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base16 = { workspace = true }
bounded-integer = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
ergotree-ir = { workspace = true, features = ["json"] }
num-bigint = { workspace = true }
num-traits = { workspace = true }
proptest-derive = { workspace = true, optional = true }
sigma-ser = { workspace = true }
sigma-util = { workspace = true }
ergo-chain-types = { workspace = true }
ergo-merkle-tree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true , optional = true }

[dev-dependencies]

[features]
default = []
arbitrary = ["proptest", "proptest-derive", "ergo-chain-types/arbitrary", "ergotree-ir/arbitrary"]
