[package]
name = "ergo-rest"
version = "0.1.1"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "Ergo node REST API library"
repository = "https://github.com/ergoplatform/sigma-rust"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "^0.1"
bounded-integer = { version = "^0.5", features = ["types"] }
bounded-vec = { version = "^0.6.0", features=["serde"] }
sigma-ser = { version = "^0.5.0", path = "../sigma-ser" }
sigma-util = { version = "^0.5.0", path = "../sigma-util" }
ergo-chain-types = { version = "^0.3.0", path = "../ergo-chain-types" }
ergo-nipopow = { version = "^0.3.0", path = "../ergo-nipopow" }
futures = "0.3"
thiserror = "1"
derive_more = "0.99"
proptest-derive = {version = "0.3.0", optional = true }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0", optional = true }
url = "2.2"
# Dependencies for `wasm-timer`
parking_lot = "0.12"
pin-utils = "0.1"
# Dependencies for `reqwest`
http = "0.2"
bytes = "1.0"
serde_urlencoded = "0.7.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
# Dependencies for `wasm-timer`
js-sys = "0.3"
wasm-bindgen = "0.2"
# Depdencies for `reqwest`
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.25"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "AbortController",
    "AbortSignal",
    "Response",
    "Window",
    "FormData",
    "Blob",
    "BlobPropertyBag",
    "ServiceWorkerGlobalScope",
    "RequestCredentials",
    "File",
    "Performance"
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.11.10", default-features = false, features = ["json"] }

[dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "1.0.0"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]
optional = true

[features]
json = ["serde_json"]
arbitrary = ["proptest", "proptest-derive"]
default = ["json"]

[dev-dependencies]
sigma-test-util = { version = "^0.3.0", path = "../sigma-test-util" }

# Addition from `reqwest`
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3"
