[package]
name = "ergoscript-compiler"
version = "0.13.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "Compiler for ErgoScript"
repository = "https://github.com/ergoplatform/sigma-rust"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ergotree-ir = { version = "^0.18.0", path = "../ergotree-ir" }
logos = "0.12"
text-size = "1.1.0"
derive_more = "0.99"
num-derive = "0.3.3"
num-traits = "0.2.14"
rowan = "0.12.1"
drop_bomb = "0.1.5"
line-col = "0.2.1"

[dev-dependencies]
expect-test = "1.0.1"
