[package]
name = "ergoscript-compiler"
version = "0.17.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
repository.workspace = true
edition.workspace = true
description = "Compiler for ErgoScript"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ergotree-ir = { workspace = true }
derive_more = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
logos = "0.12"
text-size = "1.1.0"
rowan = "0.12.1"
drop_bomb = "0.1.5"
line-col = "0.2.1"

[dev-dependencies]
expect-test = "1.0.1"
