[package]
name = "ergotree-interpreter"
version = "0.14.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "ErgoTree interpreter"
repository = "https://github.com/ergoplatform/sigma-rust"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sigma-util = { version = "^0.3.0", path = "../sigma-util" }
ergotree-ir = { version = "^0.14.0", path = "../ergotree-ir" }
indexmap = "1.3.2"
k256 = { version = "0.9.6", features = ["zeroize", "arithmetic", "ecdsa"] }
elliptic-curve = {version = "0.10.6", features = [ "zeroize", "ff"]}
blake2 = "0.9"
rand = "0.8.4"
lazy_static = "1.4"
thiserror = "1"
derive_more = "0.99"
num-traits = "0.2.14"
proptest-derive = {version = "0.3.0", optional = true }
base16 = "0.2.1"
bounded-vec = { version = "^0.5.0", features=["serde"] }
bytes = "1.1"
num-bigint = "0.4.0"
scorex_crypto_avltree = "0.1.0"
#bounded-vec = { git = "https://github.com/ergoplatform/bounded-vec", rev="f684d78" }
bounded-vec = { version = "^0.5.0", features=["serde"] }

[dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "1.0.0"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]
optional = true

[features]
default = []
arbitrary = ["proptest", "proptest-derive"]

[dev-dependencies]
ergotree-ir = { version = "^0.14.0", path = "../ergotree-ir", features = ["arbitrary"] }
ergoscript-compiler = { version = "^0.10.0", path = "../ergoscript-compiler" }
proptest = "1.0.0"
sigma-test-util = { version = "^0.3.0", path = "../sigma-test-util" }

