[package]
name = "ergotree-interpreter"
version = "0.19.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "ErgoTree interpreter"
repository = "https://github.com/ergoplatform/sigma-rust"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sigma-util = { version = "^0.7.0", path = "../sigma-util" }
sigma-ser = { version = "^0.9.0", path = "../sigma-ser" }
ergo-chain-types = { version = "^0.6.0", path = "../ergo-chain-types" }
ergotree-ir = { version = "^0.19.0", path = "../ergotree-ir" }
gf2_192 = { version = "^0.19.0", path = "../gf2_192" }
indexmap = "1.3.2"
k256 = { version = "0.10.0", features = ["arithmetic", "ecdsa"] }
elliptic-curve = {version = "0.11.6", features = [ "ff"]}
blake2 = "0.9"
rand = "0.8.5"
lazy_static = "1.4"
thiserror = "1"
derive_more = "0.99"
num-traits = "0.2.14"
proptest-derive = {version = "0.3.0", optional = true }
base16 = "0.2.1"
bytes = "1.1"
num-bigint = "0.4.0"
scorex_crypto_avltree = "0.1.0"
bounded-vec = { version = "^0.7.0", features=["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "1.0.0"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]
optional = true

[dependencies.serde_with]
version = "1.9.1"
features = [ "json" ]
optional = true

[features]
default = ["json"]
json = ["serde", "serde_json", "serde_with", "bounded-vec/serde"]
arbitrary = ["proptest", "proptest-derive", "ergotree-ir/arbitrary", "ergo-chain-types/arbitrary", "gf2_192/arbitrary"]

[dev-dependencies]
ergotree-ir = { version = "^0.19.0", path = "../ergotree-ir", features = ["arbitrary"] }
ergoscript-compiler = { version = "^0.15.0", path = "../ergoscript-compiler" }
proptest = "1.0.0"
sigma-test-util = { version = "^0.3.0", path = "../sigma-test-util" }

